Platform 0.95

* Reporting

  We changed some metric names:

    - RequestStats.* renamed to HttpServer.*
    - DetailedRequestStats.RequestTime.* renamed to HttpServer.RequestTimeByCode.*
    - Failure.Count renamed to ServiceClient.Failure.Count
    - ResponseTime.* renamed to ServiceClient.RequestTime.*

  We no longer report a MaxError metric from TimeStat and DistributionStat

Platform 0.94

* The launcher now invokes the JVM with the following default switches:

    -server
    -XX:+UseConcMarkSweepGC
    -XX:+ExplicitGCInvokesConcurrent
    -XX:+HeapDumpOnOutOfMemoryError
    -XX:+AggressiveOpts
    -XX:+DoEscapeAnalysis
    -XX:+UseCompressedOops
    -XX:OnOutOfMemoryError=kill -9 %p

* We removed unnecessary features from the Rack launcher:

  - The rack launcher no longer copies the etc directory to rack/config
  - The rack config path is now always "rack/config.ru"
  - The rack environment is now always "production"

Platform 0.93

* Reverted the Hamcrest support in JsonTester.assertJsonEncode()

* Library upgrade
  - Jetty to 9.1.3

Platform 0.92

* We created TestingReportCollectionFactory

* JsonTester.assertJsonEncode() now supports Hamcrest matchers

Platform 0.91

* AsyncHttpClient collapsed into HttpClient

  - We moved the executeAsync() method into the HttpClient interface.
  - The AsyncHttpClient interface is now deprecated.
  - The AsyncHttpClient.AsyncHttpResponseFuture interface is now named
    HttpClient.HttpResponseFuture

* HttpClient uses Jetty

  We replaced the Apache and Netty HttpClient implementations with
  JettyHttpClient, a Jetty implementation.

* Configuration warnings are no longer sent to the event service upon startup.

* We added a Bootstrap.quiet() method to disable logging of configuration.

* We tightened the type bounds of Assertions.assertInstanceOf() to catch some
  errors at compile time.

* Library upgrades
  - Jetty to 9.1.2
  - JRuby to 1.7.11

* Maven plugin upgrades
  - maven-duplicate-finder-plugin 1.0.6
